<resources>
    <string name="app_name">ToDo App C42 G Sun Wed</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="add_new_task">Add New Task</string>
    <string name="enter_task_title">enter task title…</string>
    <string name="enter_task_desc">enter task description…</string>
    <string name="select_time">Select time</string>
    <string name="please_select_task_time">Please select task Time</string>
    <string name="add">Add</string>
    <string name="done">Done !</string>
    <string name="title_required">Title Required</string>
    <string name="desc_required">Description Required</string>
    <string name="please_select_task_date">Please enter task date</string>
    <string name="select_date">Select Date</string>
    <string name="date_required">Date Required.</string>
    <string name="time_required">Time Required.</string>
    <string name="edit_task">Edit Task</string>
    <string name="save_changes">Save Changes</string>
    <string name="to_do_list">To Do List</string>
    <string name="mode">Mode</string>
    <string name="language">Language</string>
    <array name="language_items">
        <item>English</item>
        <item>Arabic</item>
    </array>
    <array name="mode_items">
        <item>Light</item>
        <item>Dark</item>
    </array>
</resources>
