<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/edit_task_text"
            style="@style/LargeTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/edit_task"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="38dp"
            android:hint="@string/enter_task_title"
            app:layout_constraintTop_toBottomOf="@id/edit_task_text" />

        <EditText
            android:id="@+id/edit_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="38dp"
            android:gravity="top"
            android:hint="@string/enter_task_desc"
            android:lines="2"
            app:layout_constraintTop_toBottomOf="@id/edit_title_text" />

        <TextView
            android:id="@+id/edit_select_time_label"
            style="@style/MediumSubTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="38dp"
            android:layout_marginTop="24dp"
            android:text="@string/select_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_description_text" />

        <TextView
            android:id="@+id/edit_time_text_view"
            style="@style/LightDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_task_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_select_time_label" />

        <TextView
            android:id="@+id/edit_select_date_label"
            style="@style/MediumSubTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="38dp"
            android:layout_marginTop="24dp"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_time_text_view" />

        <TextView
            android:id="@+id/edit_date_text_view"
            style="@style/LightDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_task_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_select_date_label" />

        <Button
            android:id="@+id/save_changes_todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_date_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>